--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body{padding-bottom:60px}
     <img src="img-pizza-edu.jpg" alt="Pizza PIZZA EDU"/>
     <div class="branding">
       <h1>PIZZA EDU</h1>
-      <p><strong>Horarios:</strong> Jueves a domingo y feriados de 19 a 23 hs.</p>
+      <p><strong>Horarios:</strong> 19 a 23 hs.(Martes cerrado)</p>
     </div>
   </header>
 
