--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ body{padding-bottom:60px}
   <!-- STEP 1 -->
   <section data-step="1">
     <details open>
-      <summary>PROMOCIONES <span class="chev">▾</span></summary>
+      <summary>PROMOCIONES 🔥 <span class="chev">▾</span></summary>
       <div class="section-body">
         <div class="item-row" data-id="promo-3-muzza">
           <div class="item-title">3 muzza</div>
@@ -110,7 +110,7 @@ body{padding-bottom:60px}
     </details>
 
     <details>
-      <summary>PIZZAS <span class="chev">▾</span></summary>
+      <summary>PIZZAS 🍕 <span class="chev">▾</span></summary>
       <div class="section-body">
         <div class="item-row" data-id="pizza-muzza"><div class="item-title">Muzza</div><div class="price" data-price>--</div><div class="qty"><button class="btn minus">−</button><strong class="q">0</strong><button class="btn plus">+</button></div></div>
         <div class="item-row" data-id="pizza-jamon"><div class="item-title">Jamón</div><div class="price" data-price>--</div><div class="qty"><button class="btn minus">−</button><strong class="q">0</strong><button class="btn plus">+</button></div></div>
@@ -127,7 +127,7 @@ body{padding-bottom:60px}
     </details>
 
     <details>
-      <summary>EMPANADAS Y CANASTITAS <span class="chev">▾</span></summary>
+      <summary>EMPANADAS Y CANASTITAS 🥟 <span class="chev">▾</span></summary>
       <div class="section-body" id="empanadas">
         <div class="item-row" data-id="emp-unidad">
           <div>
