--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ body{padding-bottom:60px}
       <form id="customerForm" class="form-grid" autocomplete="on">
         <div class="field">
           <label for="inpNombre">Tu nombre</label>
-          <input id="inpNombre" name="name" autocomplete="name" autocapitalize="words" spellcheck="false" type="text" placeholder="Ej: Juan Pérez" required>
+          <input id="inpNombre" name="name" autocomplete="name" autocapitalize="words" spellcheck="false" type="text" placeholder="Ej: Juan" required>
         </div>
         <div class="field">
           <label for="inpWhatsapp">Número de WhatsApp</label>
@@ -176,7 +176,7 @@ body{padding-bottom:60px}
         </div>
         <div class="field" style="grid-column: 1 / -1;">
           <label for="inpAclaracion">Aclaración (opcional)</label>
-          <textarea id="inpAclaracion" name="address-line2" autocomplete="address-line2" rows="2" placeholder="Ej: Enfrente del colegio Nº 14"></textarea>
+          <textarea id="inpAclaracion" name="address-line2" autocomplete="address-line2" rows="2" placeholder="Ej: Puerta de madera, timbre funciona // Edificio ‘Los Álamos’, torre B"></textarea>
         </div>
       </form>
     </section>
