--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ body{padding-bottom:60px}
         <div class="item-row" data-id="emp-unidad">
           <div>
             <div class="item-title">Por unidad</div>
-            <div class="muted">Elegí sabores. Cantidad libre.</div>
+            <div class="muted">Elegí cantidad de unidades y gustos</div>
           </div>
           <div class="price" id="price-emp-unidad">$ 0</div>
           <button class="pill" onclick="openBuilder('unidad')">Seleccionar</button>
@@ -140,7 +140,7 @@ body{padding-bottom:60px}
         <div class="item-row" data-id="emp-media">
           <div>
             <div class="item-title">Media docena</div>
-            <div class="muted">Elegí 6 sabores por cada media docena.</div>
+            <div class="muted">Elegí 6 gustos por cada media docena.</div>
           </div>
           <div class="price" id="price-emp-media">$ 0</div>
           <button class="pill" onclick="openBuilder('media')">Seleccionar</button>
@@ -148,7 +148,7 @@ body{padding-bottom:60px}
         <div class="item-row" data-id="emp-docena">
           <div>
             <div class="item-title">Docena</div>
-            <div class="muted">Elegí 12 sabores por cada docena.</div>
+            <div class="muted">Elegí 12 gustos por cada docena.</div>
           </div>
           <div class="price" id="price-emp-docena">$ 0</div>
           <button class="pill" onclick="openBuilder('docena')">Seleccionar</button>
